--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!--logo-->
             <div class="header-left">
                 <div class="logo">
-                    <img src="/bh.jpg" alt="">
+                    <img src="./files/bh.jpg" alt="">
                 </div>
             </div>
             <!--标题-->
@@ -59,7 +59,7 @@
         <!--游戏截图-->
         <div class="jietu-cen">
             <h1>游戏截图</h1>
-            <img src="/bhh.jpg">
+            <img src="./files/bhh.jpg">
         </div>
         <!--游戏简介-->
         <div class="intro-container">
